<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/relativeLayout"
        android:clickable="false"
        android:background="#ff222222"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imvLogo"
            android:src="@drawable/logo36"
            android:layout_centerVertical="true"
            android:contentDescription=""
            android:layout_marginLeft="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/tvTitle"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffffff" />
    </RelativeLayout>

    <ViewFlipper
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vwFlp"
        android:flipInterval="8000"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="220dp"
                android:id="@+id/imv1"
                android:src="@drawable/london"
                android:scaleType="fitXY"
                android:contentDescription="@string/imvMain" />

            <fragment
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/frgMain1"
                android:name="vladimir.gotravel.TableMain">

            </fragment>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="220dp"
                android:id="@+id/imv2"
                android:src="@drawable/paris"
                android:scaleType="fitXY"
                android:contentDescription="@string/imvMain" />

            <fragment
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/frgMain2"
                android:name="vladimir.gotravel.TableMain">

            </fragment>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="220dp"
                android:id="@+id/imv3"
                android:src="@drawable/rome"
                android:scaleType="fitXY"
                android:contentDescription="@string/imvMain" />

            <fragment
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/frgMain3"
                android:name="vladimir.gotravel.TableMain">

            </fragment>
        </LinearLayout>

    </ViewFlipper>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvPromo"
        android:id="@+id/tvProm"
        android:layout_above="@+id/btnCrJ"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCrJ"
        android:id="@+id/btnCrJ"
        android:textSize="24sp"
        android:textColor="#ffffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_gen"  />

</RelativeLayout>
